--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,7 @@ body {
     color: #E3E3E1;
     padding: 0;
     margin: 0;
-    /*background: #1c2220;*/
+    /*background: #1c2220;*/ /* no te olvides que si al final no usas esto no tiene que aparecer directamente */
     text-decoration: none;
 
 }
@@ -39,22 +39,22 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 1.4375rem 3rem;
-    align-items: center;
+    padding: 1.4375rem 3rem; /* los rems son tamaños tipográficos, no de tamaño, además ese número es muy controversial */
+    align-items: center; /* no genera cambios */
 
 }
 
-.menu {
+.menu { /* por un lado tenés este menú con estas propiedades, pero después tenés en la línea 308 una propiedad nav que cancela todo esto que estás declarando en esta línea, guarda con eso, que quede en un mismo lugar*/
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-.menu a {
-    padding: 0.2rem 1.2rem;
+.menu a { /* lo mismo de arriba te está pasando acá */
+    padding: 0.2rem 1.2rem; /* no usar rem */
     border-radius: 5rem;
     transition: background-color 0.3s, color 0.3s;
-    font-size: 19px;
+    font-size: 19px; /* acá sí podrías usar rem */
     font-weight: 200;
 }
 
@@ -65,8 +65,8 @@ header {
 .icono {
     background-image: url(img/icono.svg);
     display: flex;
-    width: 4.5625rem;
-    height: 4rem;
+    width: 4.5625rem; /* no usar rem */
+    height: 4rem; /* no usar rem */
     justify-content: center;
     align-items: center;
 }
@@ -82,25 +82,25 @@ header {
     header {
         flex-direction: column;
         align-items: center;
-        gap: 1rem;
-        padding: 1.5rem 1rem;
+        gap: 1rem; /* no usar rem */
+        padding: 1.5rem 1rem; /* no usar rem */
     }
 
     nav {
         flex-wrap: wrap;
         justify-content: center;
-        gap: 1.5rem;
+        gap: 1.5rem; /* no usar rem */
     }
 
     .menu {
         flex-wrap: wrap;
         justify-content: center;
-        gap: 0.5rem;
+        gap: 0.5rem; /* no usar rem */
     }
 
     .menu a {
         font-size: 1.5rem;
-        padding: 0.4rem 1rem;
+        padding: 0.4rem 1rem; /* no usar rem */
     }
 
 /*----Texto----*/
@@ -120,7 +120,7 @@ header {
     #galeria {
         position: static;
         height: auto;
-        padding: 0rem;
+        padding: 0rem; /* cuando el valor es cero no hace falta poner una unidad de medida porque es un número universal */
         display: flex;
         justify-content: center;
     }
@@ -133,7 +133,7 @@ header {
         display: flex !important;
         flex-direction: column !important;
         align-items: center;
-        gap: 1rem;
+        gap: 1rem; /* no usar rem */
     }
 
     .container a.box {
@@ -142,14 +142,14 @@ header {
         aspect-ratio: 1 / 1;
         background-size: cover;
         background-position: center;
-        border-radius: 0.5rem;
+        border-radius: 0.5rem; /* no usar rem */
         transition: none;
     }
 
     .box::after {
-        font-size: 1rem;
-        padding: 0.5rem 1rem;
-        bottom: 0.5rem;
+        font-size: 1rem; 
+        padding: 0.5rem 1rem; /* no usar rem */
+        bottom: 0.5rem; /* no usar rem */
     }
 
     .container:has(.box:hover),
@@ -170,7 +170,7 @@ header {
     #texto-sobre-mi {
         width: 100%;
         align-items: left;
-        gap: 1.5rem;
+        gap: 1.5rem; /* no usar rem */
     }
 
     #texto-sobre-mi p {
@@ -181,7 +181,7 @@ header {
     #datos {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 1rem; /* no usar rem */
         width: 100%;
     }
 
@@ -195,25 +195,25 @@ header {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        gap: 1.5rem;
+        gap: 1.5rem; /* no usar rem */
     }
 
     .columnas-exp,
     .columnas-edu {
         flex-direction: column;
-        gap: 2rem;
+        gap: 2rem; /* no usar rem */
     }
 
     /*-----CONTACTO-----*/
     #contacto {
-        padding: 1.5rem;
+        padding: 1.5rem; /* no usar rem */
         text-align: center;
     }
 
     #form-contacto {
         width: 100%;
         max-width: 100%;
-        gap: 1rem;
+        gap: 1rem; /* no usar rem */
     }
 
     .form-grupo input,
@@ -232,22 +232,22 @@ header {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 0.8rem;
+        gap: 0.8rem; /* no usar rem */
         height: auto;
-        padding: 1rem;
+        padding: 1rem; /* no usar rem */
         text-align: center;
         position: relative;
-        margin-top: 2rem;
+        margin-top: 2rem; /* no usar rem */
     }
 
     footer ul {
-        gap: 1rem;
+        gap: 1rem; /* no usar rem */
         flex-wrap: wrap;
     }
 
     footer p,
     footer li {
-        font-size: 0.9rem;
+        font-size: 0.9rem; 
     }
 }
 
@@ -256,11 +256,11 @@ header {
 
 h1 {
     font-family: Workbench;
-    font-size: 4rem;
+    font-size: 4rem; 
     font-style: normal;
     font-weight: 900;
     line-height: 100%;
-    letter-spacing: 0.475rem;
+    letter-spacing: 0.475rem; 
 }
 
 h2 {
@@ -273,7 +273,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.5rem; 
     font-weight: 200;
     text-transform: uppercase;
 
@@ -308,7 +308,7 @@ p {
 nav {
     display: flex;
     align-items: center;
-    gap: 5.5rem;
+    gap: 5.5rem; /* no usar rem */
 
 }
 
@@ -333,8 +333,8 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2.375rem;
-    padding: 9rem 0;
+    gap: 2.375rem; /* no usar rem */
+    padding: 9rem 0; /* no usar rem */
 
 }
 
@@ -343,20 +343,20 @@ nav a {
     flex-direction: column;
     align-items: center;
     align-self: stretch;
-    gap: 1rem;
+    gap: 1rem; /* no usar rem */
 }
 
 .boton a {
     font-family: "Archivo Narrow";
-    font-size: 1.625rem;
+    font-size: 1.625rem; 
     font-style: normal;
     font-weight: 600;
     line-height: 1.625rem;
     letter-spacing: 0.065rem;
     text-transform: uppercase;
 
-    border-radius: 5rem;
-    padding: 0.6875rem 2rem;
+    border-radius: 5rem; /* no usar rem */
+    padding: 0.6875rem 2rem; /* no usar rem */
     text-decoration: none;
     display: inline-flex;
     justify-content: center;
@@ -378,14 +378,14 @@ nav a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1.5rem; /* no usar rem */
 }
 
 .container {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 1em;
+    gap: 1em; /* no usar em */
     width: 800px;
     height: 500px;
     transition: all 400ms;
@@ -445,7 +445,7 @@ nav a {
     bottom: 20px;
     background-color: #DA308E;
     color: #E3E3E1;
-    border-radius: 5rem;
+    border-radius: 5rem; /* no usar rem */
     padding: 10px 10px 10px 14px;
     text-transform: uppercase;
     transform: translateY(60px);
@@ -465,22 +465,22 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 0.4rem;
+    gap: 0.4rem; /* no usar rem */
 }
 
 #gal_ind {
     display: flex;
     justify-content: left;
-    padding-left: 3.1rem;
-    align-items: flex-start;
-    gap: 1.5rem;
+    padding-left: 3.1rem; /* no usar rem */
+    align-items: flex-start; 
+    gap: 1.5rem; /* no usar rem */
 }
 
 .cont_ind {
     position: relative;
     display: grid;
     grid-template-columns: 6fr 6fr 6fr 6fr 6fr;
-    gap: 1em;
+    gap: 1em; /* no usar rem */
     width: 800px;
     height: 500px;
     transition: all 400ms;
@@ -545,40 +545,40 @@ nav a {
 
 #sobre-mi {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-start; /* no hace nada */
     justify-content: center;
-    gap: 2.1875rem;
-    padding: 1rem;
+    gap: 2.1875rem; /* no usar rem */
+    padding: 1rem; /* no usar rem */
 }
 
 #texto-sobre-mi {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
-    width: 27rem;
+    gap: 3rem; /* no usar rem */
+    width: 27rem; /* no usar rem, además cuidado con los anchos fijos */
 }
 
-#sobre-mi p {
+#sobre-mi p { /* si ya el padre tiene tamaños seteados, que es la propiedad anterior, tiene sentido que declares todas estas propiedades? */
     display: flex;
-    width: 25.5rem;
-    height: 8.1875rem;
+    width: 25.5rem; /* no usar rem */
+    height: 8.1875rem; /* no usar rem */
 }
 
-#datos {
+#datos { /* ninguna de estas propiedades tiene sentido porque adentro de esta etiqueta hay una sola etiqueta, o sea que no hay columnas */
     display: grid;
-    width: 35.5625rem;
-    height: 11.625rem;
-    padding: 0 0.625rem;
-    row-gap: 3.9375rem;
-    column-gap: 63px;
+    width: 35.5625rem; /* no usar rem */
+    height: 11.625rem; /* no usar rem */
+    padding: 0 0.625rem; /* no usar rem */
+    row-gap: 3.9375rem; /* no usar rem */
+    column-gap: 63px; /* no usar rem */
 }
 
 #datos li {
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 2rem; 
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; /* no hace nada */
 }
 
 #datos span {
@@ -592,17 +592,17 @@ nav a {
 .columnas {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    gap: 3.875rem;
-    grid-row: 1 / span 1;
+    align-items: flex-start; /* no hace nada */
+    gap: 3.875rem; /* no usar rem */
+    grid-row: 1 / span 1; 
     grid-column: 1 / span 1;
 }
 
 .columna1 {
     display: inline-flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 3.875rem;
+    align-items: flex-start; /* no hace nada */
+    gap: 3.875rem; /* no usar rem */
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
 }
@@ -612,9 +612,9 @@ nav a {
 #experiencia {
     display: flex;
     justify-content: center;
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-    gap: 2.5rem;
+    padding-top: 2rem; /* no usar rem */
+    padding-bottom: 3rem; /* no usar rem */
+    gap: 2.5rem; /* no usar rem */
 }
 
 #experiencia li {
@@ -622,12 +622,12 @@ nav a {
     line-height: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; /* no hace nada */
 }
 
 #experiencia span {
     line-break: after-white-space;
-    font-size: 1.1rem;
+    font-size: 1.1rem; 
     font-style: normal;
     font-weight: 600;
     line-height: 1.9375rem;
@@ -636,14 +636,14 @@ nav a {
 #exp {
     display: flex;
     align-items: center;
-    gap: 2.1875rem;
+    gap: 2.1875rem; /* no usar rem */
 }
 
 .columnas-exp {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    gap: 11rem;
+    align-items: flex-start; /* no hace nada */
+    gap: 11rem; /* no usar rem */
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     list-style-type: none;
@@ -652,16 +652,16 @@ nav a {
 .columna2 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 3.875rem;
+    align-items: flex-start; /* no hace nada */
+    gap: 3.875rem; /* no usar rem */
 }
 
 #exp li {
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 2rem; 
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; /* no hace nada */
 }
 
 #exp span {
@@ -674,20 +674,20 @@ nav a {
 
 /*----------------EDUCACION------------------*/
 
-#educacion {
+#educacion { /* si experiencia y educación tienen exactamente las mismas propiedades, no tiene más sentido declararlas de una sola forma para acortar el archivo? */
     display: flex;
     justify-content: center;
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-    gap: 3.5rem;
+    padding-top: 2rem; /* no usar rem */
+    padding-bottom: 3rem; /* no usar rem */
+    gap: 3.5rem; /* no usar rem */
 }
 
 #educacion li {
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 2rem; 
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; /* no hace nada */
 }
 
 #educacion span {
@@ -701,14 +701,14 @@ nav a {
 #edu {
     display: flex;
     align-items: center;
-    gap: 3rem;
+    gap: 3rem; /* no usar rem */
 }
 
 .columnas-edu {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    gap: 13.3rem;
+    align-items: flex-start; /* no hace nada */
+    gap: 13.3rem; /* no usar rem */
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     list-style-type: none;
@@ -717,17 +717,17 @@ nav a {
 .columna3 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 3.875rem;
+    align-items: flex-start; /* no hace nada */
+    gap: 3.875rem; /* no usar rem */
 }
 
 #edu li {
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 2rem; /* no usar rem */
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-}
+    align-items: flex-start; /* no hace nada */
+} 
 
 #edu span {
     line-break: after-white-space;
@@ -740,15 +740,15 @@ nav a {
 /*----------------►CONTACTO◄------------------*/
 
 #contacto {
-    padding: 0.5rem 3rem;
+    padding: 0.5rem 3rem; /* no usar rem */
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 2rem; /* no usar rem */
 }
 
 
-#contacto h2 {
+#contacto h2 { /* todas toooooodas estas propiedades ya las declaraste en la 266, no repitas! */
     font-family: Archivo;
     font-size: 2rem;
     font-weight: 300;
@@ -761,7 +761,7 @@ nav a {
     max-width: 600px;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1.5rem; /* no usar rem */
 }
 
 .form-grupo {
@@ -771,13 +771,13 @@ nav a {
 
 .form-grupo label {
     font-family: "Archivo Narrow";
-    font-size: 1rem;
+    font-size: 1rem; 
     font-style: normal;
     font-weight: 500;
     line-height: 1.1875rem;
     letter-spacing: 0.055rem;
     text-transform: uppercase;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.3rem; /* no usar rem */
 }
 
 .form-grupo input,
@@ -786,7 +786,7 @@ nav a {
     font-size: 1.375rem;
     font-weight: 400;
     line-height: 2rem;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 1rem; /* no usar rem */
     background: rgba(217, 217, 217, 1);
     border: none;
     color: #0f0f0f;
@@ -798,14 +798,14 @@ nav a {
 }
 
 .boton-enviar {
-    align-self: flex-start;
+    align-self: flex-start; /* no hace nada */
     font-family: "Archivo Narrow";
-    font-size: 1.625rem;
+    font-size: 1.625rem; 
     font-weight: 600;
     letter-spacing: 0.065rem;
     text-transform: uppercase;
-    padding: 0.6875rem 2rem;
-    border-radius: 5rem;
+    padding: 0.6875rem 2rem; /* no usar rem */
+    border-radius: 5rem; /* no usar rem */
     border: none;
     background-color: transparent;
     transition: background-color 0.3s, color 0.3s;
@@ -821,8 +821,8 @@ nav a {
 
 footer {
     display: flex;
-    height: 5.3125rem;
-    padding: 1.4375rem 2.7rem 0rem 1.5rem;
+    height: 5.3125rem; /* no usar rem */
+    padding: 1.4375rem 2.7rem 0rem 1.5rem; /* no usar rem */
     justify-content: space-between;
     align-items: center;
     flex-shrink: 0;
@@ -830,6 +830,6 @@ footer {
 
 footer ul {
     display: flex;
-    align-items: center;
-    gap: 2.1875rem;
+    align-items: center; /* esta propiedad no hace nada */
+    gap: 2.1875rem; /* no usar rem */
 }
