--- a/estilos.css
+++ b/estilos.css
@@ -421,9 +421,10 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-top: auto;
+    margin-bottom: 0;
     padding-top: 10px;
     position: relative !important;
-    width: 100%;
+    width: 1100px;
 }
 
 footer ul {
@@ -572,6 +573,11 @@ footer ul {
         width: 100%;
         text-align: left;
     }
+
+    /*----------@CONTACTO----------*/
+#contacto {
+    padding: 56px;
+}
 
     /*----------@FOOTER----------*/
     footer {
